# yaraxwasm

./: .dockerignore  .gitignore  .golangci.yml  Cargo.toml  Dockerfile.test  LICENSE  Makefile  README.md  abi_helpers.go  compiler.go  compiler_test.go  diagnostics.go  doc.go  example_test.go  generate.go  go.mod  go.sum  guest_memory.go  host_runtime.go  host_runtime_test.go  init.go  json_fast.go  modules_functionality_test.go  rules.go  runtime_client.go  scan_result_binary.go  scanner.go  scanner_test.go  signed_rules.go  signed_rules_test.go  signed_rules_x509.go  structs_easyjson.go  trace.go  version.go  wasm_runtime_test.go  wire_json.go
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: go-code-health.yml  guest-code-health.yml  tests.yml
benchcmp/: .golangci.yml  bench_test.go  doc.go  external_bench_test.go  go.mod
examples/: README.md  init-pki.sh
examples/ed25519_export_sign/: main.go
examples/ed25519_verify_load/: main.go
examples/x509_export_sign/: main.go
examples/x509_verify_load/: main.go
experimental/: allocator.go  allocator_test.go  doc.go  integration_test.go  integration_userfaultfd_linux_test.go  mmap_region_stub.go  mmap_region_unix.go  modules_functionality_userfaultfd_linux_test.go  trace.go  userfaultfd_handler_linux.go  userfaultfd_trace_linux.go
guest/: Cargo.toml
guest/.cargo/: config.toml
guest/src/: main.rs
guest/tools/: build_web_release.rs
internal/module/: yarax_guest.wasm.zst
internal/moduletest/: suite.go
scripts/: lint_benchcmp.sh  run_compare_benchmarks.sh
(+4 files in other folders)
