[workspace.package]
version = "0.1.0"
authors = ["Niall Newman <nn@turacolabs.com>"]
edition = "2024"
homepage = "https://github.com/niallnsec/yaraxwasm"
repository = "https://github.com/niallnsec/yaraxwasm"
readme = "README.md"
license = "MIT"
rust-version = "1.94.0"

[workspace]
members = ["guest"]
resolver = "3"

[workspace.dependencies]
base64 = "0.22.1"
serde = "1.0.228"
serde_json = "1.0.149"
wasm-opt = "0.116.1"
yara-x = { git = "https://github.com/niallnsec/yara-x.git", branch = "wasi" }
